--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "bootstrap": "4.1.3",
+    "firebase": "^5.5.9",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-redux": "^5.1.1",
+    "react-redux-firebase": "^2.2.2",
     "react-router-dom": "^4.4.0-beta.6",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
+    "redux-firestore": "^0.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
